--- a/index.html
+++ b/index.html
@@ -6,20 +6,9 @@
 </head>
 <body>
 <script>
-//連想配列
-//問題
+var date = 100;
+console.log(date);
 
-for(var i = 0; i < student.length; i++){
-    console.log(student[i]);
-}
-
-// var array = [];
-
-// // arrayに対して1から100までの数値を格納する処理
-
-// for(var i = 0; i  < array.length; i++){
-//     console.log(array[i]);
-// }
 
 </script>
 </body>
