--- a/基本文法編5 配列/配列 - 問題/練習.html
+++ b/基本文法編5 配列/配列 - 問題/練習.html
@@ -64,7 +64,7 @@ var getMax = function(data){
 
 	for (var i = 0; i < data.length; i++) {
 	if(num > data[i]){
-		var num = data[i];
+		 num = data[i];
 	}
 	}
 	    return num;
